syntax = "proto3";

package analytics; 

service AnalyticsService {
  rpc ConvertCurrency(ConversionRequest) returns (ConversionResponse) {}
  rpc GetMarketInfo(SearchMarketsRequest) returns (MarketsResponse) {}
  rpc GetIndicator(IndicatorRequest) returns (IndicatorResponse) {}
}

// Requests
message ConversionRequest {
  string exchange = 1;
  string from = 2;
  string to = 3;
  double fromAmount = 4;
  string atTimestamp = 5;
}

message SearchMarketsRequest {
  string term = 1;
}

message IndicatorRequest {
  string indicator = 1;
}

// Responses
message MarketPrice {
  string exchange = 1;
  string marketName = 2;
  string closedAtTime = 3;
  double closedAtPrice = 4;
}

message MarketInfo {
  string exchange = 1;
  string exchangeMarketName = 2;
  string baseCurrencySymbol = 3;
  string baseCurrencyName = 4;
  int32 basePrecision = 5;
  string marketCurrencySymbol = 6;
  string marketCurrencyName = 7;
  int32 marketPrecision = 8;
  string marketName = 9;
  string minTradeSize = 10;
  string maxTradeSize = 11;
  string tradeSizeStep = 12;
  string minMarketPrice = 13;
  string maxMarketPrice = 14;
  string marketPriceStep = 15;
  string price = 16;
  string timestamp = 17;
}

message ConversionAmount {
  double convertedAmount = 1;
}

message ConversionResponse {
  string status = 1;
  string message = 2;
  ConversionAmount data = 3;
}

message MarketInfoResponse {
  repeated MarketInfo markets = 1;
}

message MarketsResponse {
  string status = 1;
  MarketInfoResponse data = 2;
}

message IndicatorResponse {
  string status = 1;
  string message = 2;
}